--- a/src/page1.html
+++ b/src/page1.html
@@ -10,7 +10,7 @@
 
 <h1>Давай найдем тебе сериал на уютный вечер</h1>
 
-<form action="textarea1.php" method="post">
+<form action="example.php" method="post">
     <h4><b><label for="seriesName">Введите название сериала:</label></b></h4>
     <p><input type="text" id="seriesName" name="seriesName"/></p>
 
