--- a/src/page2.html
+++ b/src/page2.html
@@ -10,7 +10,7 @@
 
 <h1>Лучшие сериалы</h1>
 
-<form action="textarea1.php" method="post">
+<form action="example.php" method="post">
 <h3>Рекомендуем:</h3>
 <table>
     <tr>
